# trading-workspace

./: .env.example  .gitignore  CLAUDE.md  CLAUDE_CODE_CHEATSHEET.md  README.md  docker-compose.yml  run_tests.sh  setup.sh
multi-agent-system/: pyproject.toml  run_async_cycle.py  run_cycle.py
multi-agent-system/claude_router/: README.md  requirements.txt  router.py
multi-agent-system/claude_router/config/: routing_rules.yaml
multi-agent-system/claude_router/examples/: usage_example.py
multi-agent-system/claude_router/tests/: test_router.py
multi-agent-system/config/: buckets.yaml  limits.yaml  llm_pricing.yaml
multi-agent-system/db/: migrate.py  reset_dev.py
multi-agent-system/db/migrations/: V001__extensions_and_schemas.sql  V002__shared_trades_log.sql  V003__agents_tables.sql  V004__messages_tables.sql  V005__trades_tables.sql  V006__portfolio_tables.sql  V007__market_tables.sql  V008__analytics_tables.sql  V009__seed_agents_config.sql  V010__atlas_validations_sprint2a.sql  V011__atlas_portfolio_snapshots.sql  V012__rejected_dlq.sql  V013__decision_atlas_ref_fix.sql  V014__llm_costs_cache_creation.sql  V015__alerts_table.sql  V016__add_given_up_at.sql  V017__create_system_mode_history.sql  V018__iv_history.sql
multi-agent-system/scripts/: run_api.sh  seed_portfolio.py
multi-agent-system/src/multi_agent/: config.py
multi-agent-system/tests/: test_config.py  test_config_schwab_data_layer.py  test_config_trading_mode.py
multi-agent-system/tests/agents/: conftest.py  test_apollo_agent.py  test_apollo_prompt.py  test_athena_agent.py  test_athena_prompt.py  test_athena_prompt_caveat.py  test_athena_prompt_metrics.py  test_base_agent.py  test_consensus.py  test_message_repository.py  test_mock_agents.py  test_orchestrator.py  test_proposal_shape_snapshot.py
multi-agent-system/tests/alerts/: test_alert_pipeline_e2e.py  test_alert_repository_retries.py  test_alert_router.py  test_dedup.py  test_formatters.py  test_retry_worker.py  test_telegram_sink.py  test_worker.py
multi-agent-system/tests/api/: test_agents_routes.py  test_alerts_routes.py  test_app_atlas_portfolio_flag.py  test_app_data_layer_flag.py  test_app_schwab_client_singleton.py  test_app_schwab_streamer.py  test_atlas_routes.py  test_config_routes.py  test_cost_routes.py  test_portfolio_routes.py  (+3 more)
shared_core/: README.md  pyproject.toml
shared_core/tests/: test_shared_core.py
(+229 files in other folders)
