[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shared-core"
version = "0.1.0"
description = "Shared infrastructure for Eolo + multi-agent trading system"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Trading System Team" },
]

dependencies = [
    "psycopg[binary,pool]>=3.2.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-mock>=3.12.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
